# OperationAssistant

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  config.py  db.py  main.py  seeds.py
backend/app/api/: __init__.py  approvals.py  evals.py  investigations.py  retrieval.py
backend/app/approvals/: __init__.py  models.py  store.py
backend/app/cache/: __init__.py  semantic.py
backend/app/eval_judges/: __init__.py  (+1 more)
backend/migrations/: 001_foundation.sql  002_retrieval.sql
data/runbooks/: evidence_and_citations.md  notification_queue_latency.md  partner_feed_validation.md  unsafe_replay_guardrail.md  workflow_retry_exhaustion.md
data/seeds/: incidents.json  runbook_metadata.json  tool_sample_records.json
docs/: DEVELOPMENT.md
evals/configs/: llm_eval.yml
evals/datasets/: full_quality_cases.json
evals/retrieval/: cases.json
evals/safety/: cases.json
evals/tool_use/: cases.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  retrieval.test.ts  styles.css  types.ts
scripts/: __init__.py  eval_all.py  eval_investigation.py  eval_llm.py  eval_retrieval.py  eval_safety.py
tests/backend/: test_api.py  test_dependency_smoke.py  test_eval_investigation.py  test_eval_quality_gate.py  test_eval_retrieval.py  test_eval_safety.py  test_investigation_workflow.py  test_llm_mechanism_eval.py  test_retrieval.py  test_safety_approval.py
(+30 files in other folders)
